# jcecard

./: .gitignore  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ifd-jcecard/: Cargo.toml  README.md  build.rs  install.sh
ifd-jcecard/bundle/: jcecard.conf
ifd-jcecard/bundle/ifd-jcecard.bundle/Contents/: Info.plist
ifd-jcecard/src/: lib.rs
ifd-jcecard/src/apdu/: mod.rs  response.rs  status.rs
ifd-jcecard/src/card/: atr.rs  mod.rs  state.rs  storage.rs
ifd-jcecard/src/crypto/: ecc_nist.rs  ed25519.rs  fingerprint.rs  hash.rs  mod.rs  rsa.rs  secp256k1.rs  tdes.rs  x25519.rs
ifd-jcecard/src/openpgp/: applet.rs  mod.rs  pin_manager.rs  security_state.rs
ifd-jcecard/src/piv/: applet.rs  data_objects.rs  mod.rs  security_state.rs
ifd-jcecard/src/tlv/: encoder.rs  mod.rs  parser.rs
jcecard/: __init__.py  apdu.py  atr.py  card_data.py  crypto_backend.py  main.py  pin_manager.py  tlv.py  vpcd_connection.py
jcecard/commands/: __init__.py
jcecard/piv/: applet.py
scripts/: install-jcecard.sh  start-pcscd-debug.sh
tests/: conftest.py  test_apdu.py  test_crypto_backend.py  test_ecc_curves.py  test_integration.py  test_oncard_keygen.py  test_pin_manager.py  test_piv_applet.py  test_reset_yubikey.py  test_smartcard_crypto.py  test_smartcard_piv.py  test_smartcard_primary.py  test_smartcard_sign.py  test_tlv.py
