[package]
name = "ifd-jcecard"
version = "0.1.0"
edition = "2021"
description = "PC/SC IFD Handler for jcecard virtual OpenPGP and PIV smart card"
license = "BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/kushaldas/jcecard"
homepage = "https://github.com/kushaldas/jcecard"
documentation = "https://github.com/kushaldas/jcecard"
authors = ["Kushal Das <mail@kushaldas.in>"]
keywords = ["smartcard", "pcsc", "openpgp", "piv", "virtual"]
categories = ["cryptography", "hardware-support"]

[lib]
name = "ifd_jcecard"
crate-type = ["cdylib"]

[[bin]]
name = "ifd-jcecard-install"
path = "src/bin/ifd-jcecard-install.rs"

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
lazy_static = "1.4"
libc = "0.2"
